# simple-alloc

./: CMakeLists.txt
include/: my-malloc.h
src/: alloc.cpp  free.cpp  main.cpp  malloc.cpp
